--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <h2>Total: <span id="total">0</span></h2>
 
     <button onclick="saveBird()">Save Bird</button>
+    <button onclick="showResults()">View Results</button>
+ 
+    <div id="results" style="display:none; margin-top:20px;"></div>
+
   </div>
 
   <script src="app.js"></script>
