--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
     <button onclick="saveBird()">Save Bird</button>
     <button onclick="showResults()">View Results</button>
+    <button onclick="resetShow()">New Show</button>
+
  
     <div id="results" style="display:none; margin-top:20px;"></div>
 
