--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <button onclick="saveBird()">Save Bird</button>
     <button onclick="showResults()">View Results</button>
     <button onclick="resetShow()">New Show</button>
+    <button onclick="exportCSV()">Export Results</button>
+
 
  
     <div id="results" style="display:none; margin-top:20px;"></div>
