--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      style="
        text-align:center;
        padding:40px 20px;
-       min-height:100vh;
+       height:100vh;
        background:#1e3a8a;
        color:white;
        display:flex;
