--- a/index.html
+++ b/index.html
@@ -8,83 +8,124 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="style.css" />
 
+  <!-- ✅ Disable scrolling for full-screen pages -->
   <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-  }
-</style>
-
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+  </style>
 </head>
 
 <body>
 
   <!-- ✅ INTRO SCREEN -->
+  <div id="introScreen"
+       style="
+         text-align:center;
+         padding:40px 20px;
+         height:100vh;
+         background:#1e3a8a;
+         color:white;
+         display:flex;
+         flex-direction:column;
+         justify-content:center;
+         align-items:center;
+         overflow:hidden;
+       ">
+
+    <h1 style="font-size:42px; font-weight:800; margin-bottom:24px;">
+      Orpington Show Judging
+    </h1>
+
+    <img src="orpington.png"
+         alt="Orpington"
+         style="
+           max-width:70%;
+           border-radius:18px;
+           margin-bottom:30px;
+           box-shadow:0 10px 25px rgba(0,0,0,0.4);
+         ">
+
+    <button onclick="startApp()"
+            style="
+              padding:22px 36px;
+              font-size:22px;
+              font-weight:700;
+              border-radius:14px;
+              background:#facc15;
+              color:#1e3a8a;
+              border:none;
+              cursor:pointer;
+              box-shadow:0 6px 15px rgba(0,0,0,0.35);
+            ">
+      Start Judging
+    </button>
+  </div>
+
+
   <!-- ✅ SHOW SELECTION SCREEN -->
-<div id="showScreen"
-     style="
-       display:none;
-       text-align:center;
-       padding:40px 20px;
-       height:100vh;
-       background:#1e3a8a;
-       color:white;
-       display:flex;
-       flex-direction:column;
-       justify-content:center;
-       align-items:center;
-       overflow:hidden;
-     ">
+  <div id="showScreen"
+       style="
+         display:none;
+         text-align:center;
+         padding:40px 20px;
+         height:100vh;
+         background:#1e3a8a;
+         color:white;
+         align-items:center;
+         justify-content:center;
+         flex-direction:column;
+         overflow:hidden;
+       ">
 
-  <h1 style="font-size:34px; font-weight:800; margin-bottom:22px;">
-    Select Show
-  </h1>
+    <h1 style="font-size:34px; font-weight:800; margin-bottom:22px;">
+      Select Show
+    </h1>
 
-  <select id="showSelect"
-          style="
-            width:min(520px, 90%);
-            padding:16px 14px;
-            font-size:18px;
-            border-radius:12px;
-            border:none;
-            outline:none;
-            margin-bottom:22px;
-          ">
-    <option value="">-- Choose a show --</option>
-    <option value="AvioMed Young Chicken Show 2026">AvioMed Young Chicken Show 2026</option>
-    <option value="AvioMed Nationals 2026">AvioMed Nationals 2026</option>
-    <option value="AvioMed Orpington Show 2026">AvioMed Orpington Show 2026</option>
-  </select>
+    <select id="showSelect"
+            style="
+              width:min(520px, 90%);
+              padding:16px 14px;
+              font-size:18px;
+              border-radius:12px;
+              border:none;
+              outline:none;
+              margin-bottom:22px;
+            ">
+      <option value="">-- Choose a show --</option>
+      <option value="AvioMed Young Chicken Show 2026">AvioMed Young Chicken Show 2026</option>
+      <option value="AvioMed Nationals 2026">AvioMed Nationals 2026</option>
+      <option value="AvioMed Orpington Show 2026">AvioMed Orpington Show 2026</option>
+    </select>
 
-  <button onclick="saveShowAndContinue()"
-          style="
-            padding:22px 36px;
-            font-size:22px;
-            font-weight:700;
-            border-radius:14px;
-            background:#facc15;
-            color:#1e3a8a;
-            border:none;
-            cursor:pointer;
-            box-shadow:0 6px 15px rgba(0,0,0,0.35);
-          ">
-    Next
-  </button>
+    <button onclick="saveShowAndContinue()"
+            style="
+              padding:22px 36px;
+              font-size:22px;
+              font-weight:700;
+              border-radius:14px;
+              background:#facc15;
+              color:#1e3a8a;
+              border:none;
+              cursor:pointer;
+              box-shadow:0 6px 15px rgba(0,0,0,0.35);
+            ">
+      Next
+    </button>
 
-</div>
-
+  </div>
 
 
-  <!-- ✅ JUDGING SCREEN (hidden until Start) -->
-  <div id="judgingScreen" style="display:none;">
-
+  <!-- ✅ JUDGING SCREEN -->
+  <div id="judgingScreen" style="display:none; overflow:auto; height:100vh; padding:20px;">
     <h1>🐔 Orpington Judging</h1>
-    <p style="margin-top:-10px; font-size:16px; opacity:0.9;">
-  Show: <strong><span id="showNameDisplay">Not selected</span></strong>
-</p>
 
+    <p style="margin-top:-10px; font-size:16px;">
+      Show: <strong><span id="showNameDisplay">Not selected</span></strong>
+    </p>
 
     <div class="card">
       <label>Bird ID</label>
@@ -117,7 +158,6 @@
 
       <div id="results" style="display:none; margin-top:20px;"></div>
     </div>
-
   </div>
 
   <script src="app.js"></script>
