--- a/index.html
+++ b/index.html
@@ -117,6 +117,55 @@
     </button>
 
   </div>
+  <!-- ✅ JUDGE NAME SCREEN -->
+<div id="judgeScreen"
+     style="
+       display:none;
+       text-align:center;
+       padding:40px 20px;
+       height:100vh;
+       background:#1e3a8a;
+       color:white;
+       align-items:center;
+       justify-content:center;
+       flex-direction:column;
+       overflow:hidden;
+     ">
+
+  <h1 style="font-size:34px; font-weight:800; margin-bottom:22px;">
+    Judge Name
+  </h1>
+
+  <input id="judgeName"
+         type="text"
+         placeholder="Enter judge name"
+         style="
+           width:min(520px, 90%);
+           padding:16px 14px;
+           font-size:18px;
+           border-radius:12px;
+           border:none;
+           outline:none;
+           margin-bottom:22px;
+         ">
+
+  <button onclick="saveJudgeAndContinue()"
+          style="
+            padding:22px 36px;
+            font-size:22px;
+            font-weight:700;
+            border-radius:14px;
+            background:#facc15;
+            color:#1e3a8a;
+            border:none;
+            cursor:pointer;
+            box-shadow:0 6px 15px rgba(0,0,0,0.35);
+          ">
+    Next
+  </button>
+
+</div>
+
 
 
   <!-- ✅ JUDGING SCREEN -->
