--- a/index.html
+++ b/index.html
@@ -167,6 +167,71 @@
   </div>
 
 
+  <!-- ✅ SEX / CLASS SCREEN -->
+  <div id="classScreen"
+       style="
+         display:none;
+         text-align:center;
+         padding:40px 20px;
+         height:100vh;
+         background:#1e3a8a;
+         color:white;
+         align-items:center;
+         justify-content:center;
+         flex-direction:column;
+         overflow:hidden;
+       ">
+
+    <h1 style="font-size:34px; font-weight:800; margin-bottom:22px;">
+      Select Class
+    </h1>
+
+    <div style="display:flex; flex-wrap:wrap; gap:14px; justify-content:center; width:min(560px, 95%);">
+
+      <button onclick="selectClass('PULLET')"
+              style="padding:18px 22px; font-size:20px; font-weight:800; border-radius:14px; background:#facc15; color:#1e3a8a; border:none; cursor:pointer;">
+        Pullet
+      </button>
+
+      <button onclick="selectClass('COCKEREL')"
+              style="padding:18px 22px; font-size:20px; font-weight:800; border-radius:14px; background:#facc15; color:#1e3a8a; border:none; cursor:pointer;">
+        Cockerel
+      </button>
+
+      <button onclick="selectClass('HEN')"
+              style="padding:18px 22px; font-size:20px; font-weight:800; border-radius:14px; background:#facc15; color:#1e3a8a; border:none; cursor:pointer;">
+        Hen
+      </button>
+
+      <button onclick="selectClass('COCK')"
+              style="padding:18px 22px; font-size:20px; font-weight:800; border-radius:14px; background:#facc15; color:#1e3a8a; border:none; cursor:pointer;">
+        Cock
+      </button>
+
+    </div>
+
+    <p style="margin-top:18px; font-size:18px;">
+      Selected: <strong><span id="classSelectedDisplay">None</span></strong>
+    </p>
+
+    <button onclick="saveClassAndContinue()"
+            style="
+              padding:22px 36px;
+              font-size:22px;
+              font-weight:700;
+              border-radius:14px;
+              background:#ffffff;
+              color:#1e3a8a;
+              border:none;
+              cursor:pointer;
+              box-shadow:0 6px 15px rgba(0,0,0,0.25);
+              margin-top:14px;
+            ">
+      Next
+    </button>
+  </div>
+
+
   <!-- ✅ JUDGING SCREEN -->
   <div id="judgingScreen"
        style="
@@ -185,6 +250,10 @@
 
     <p style="margin-top:-6px; font-size:16px;">
       Judge: <strong><span id="judgeNameDisplay">Not selected</span></strong>
+    </p>
+
+    <p style="margin-top:-6px; font-size:16px;">
+      Class: <strong><span id="classNameDisplay">Not selected</span></strong>
     </p>
 
     <div class="card">
@@ -220,7 +289,7 @@
     </div>
   </div>
 
-  <!-- ✅ Cache-bust JS to prevent “old version” showing on phone -->
-  <script src="app.js?v=5"></script>
+  <!-- ✅ Cache-bust to prevent “old JS” on phone -->
+  <script src="app.js?v=6"></script>
 </body>
 </html>
