--- a/index.html
+++ b/index.html
@@ -335,6 +335,10 @@
       <div id="results" style="display:none; margin-top:20px;"></div>
     </div>
   </div>
+  <p style="margin-top:-6px; font-size:16px;">
+  Colour: <strong><span id="colourNameDisplay">Not selected</span></strong>
+</p>
+
 
   <!-- ✅ Cache-bust to prevent “old JS” on phone -->
   <script src="app.js?v=6"></script>
